<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

	   <ImageView
	       android:id="@+id/ivImage"
	       android:layout_width="0dp"
	       android:layout_height="wrap_content"
	       android:layout_weight="30"
	       android:contentDescription="@string/image_description"
	       android:scaleType="fitXY"
	       android:src="@drawable/ic_launcher" />
	    
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_weight="70"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
		    <TextView
		        android:id="@+id/tvVacancyName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/vacancy_name"/>
		    
		    <TextView 
		        android:id="@+id/tvVacancyPublishDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/vacancy_date"/>
		
		    <TextView 
		        android:id="@+id/tvVacancyPublishTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/vacancy_time"/>
		    
		    <TextView 
		        android:id="@+id/tvEmployerName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/employer_name"/>
	    </LinearLayout>
	</LinearLayout>
	
   <Button 
       android:id="@+id/btnShowOnSite"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/show_on_site"/>
   	
    <ScrollView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	   <TextView 
	       android:id="@+id/tvDescription"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/description"/>
   </ScrollView>
</LinearLayout>
