<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvVacancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacancy" />
    
    <LinearLayout 
        android:id="@+id/evGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvVacancy">
        <EditText 
        android:id="@+id/etVacancy"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/vacancy_hint"/>
        <Button 
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
    </LinearLayout>
    <ListView 
        android:id="@+id/lvVacancies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/evGroup">
    </ListView>
</RelativeLayout>
